# corpus-annotation

./: README.md  pyproject.toml
src/: corpus_statistics.py  corpus_statistics_provider.py  corpus_tokenization_result.py  corpus_tokenizer.py  main.py
